--- a/ios/ImageMasking/ImageMasking/en.lproj/MainStoryboard.storyboard
+++ b/ios/ImageMasking/ImageMasking/en.lproj/MainStoryboard.storyboard
@@ -23,30 +23,66 @@
             <objects>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dED-ib-kgZ" userLabel="First Responder" sceneMemberID="firstResponder"/>
                 <tableViewController id="2Zf-IR-eAT" customClass="RootViewController" sceneMemberID="viewController">
-                    <tableView key="view" opaque="NO" clipsSubviews="YES" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" id="GHe-iu-9jb">
+                    <tableView key="view" opaque="NO" clipsSubviews="YES" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="static" style="plain" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" id="GHe-iu-9jb">
                         <rect key="frame" x="0.0" y="64" width="320" height="416"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                        <prototypes>
-                            <tableViewCell contentMode="scaleToFill" selectionStyle="blue" accessoryType="disclosureIndicator" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" id="Bfb-SE-s6k">
-                                <rect key="frame" x="0.0" y="22" width="320" height="44"/>
-                                <autoresizingMask key="autoresizingMask"/>
-                                <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                                    <rect key="frame" x="0.0" y="0.0" width="300" height="43"/>
-                                    <autoresizingMask key="autoresizingMask"/>
-                                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
-                                </view>
-                            </tableViewCell>
-                        </prototypes>
+                        <sections>
+                            <tableViewSection headerTitle="Examples" id="mIW-rJ-cfv">
+                                <cells>
+                                    <tableViewCell contentMode="scaleToFill" selectionStyle="blue" accessoryType="disclosureIndicator" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" textLabel="GZi-sl-h3e" style="IBUITableViewCellStyleDefault" id="fgi-nI-nGf">
+                                        <rect key="frame" x="0.0" y="22" width="320" height="44"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
+                                            <rect key="frame" x="0.0" y="0.0" width="300" height="43"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" text="ImageMasking" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="GZi-sl-h3e">
+                                                    <rect key="frame" x="10" y="0.0" width="280" height="43"/>
+                                                    <autoresizingMask key="autoresizingMask"/>
+                                                    <fontDescription key="fontDescription" type="boldSystem" pointSize="20"/>
+                                                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                                    <color key="highlightedColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                                </label>
+                                            </subviews>
+                                            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                        </view>
+                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                        <connections>
+                                            <segue destination="ULK-7Y-US1" kind="push" id="dIi-oJ-UzD"/>
+                                        </connections>
+                                    </tableViewCell>
+                                    <tableViewCell contentMode="scaleToFill" selectionStyle="blue" accessoryType="disclosureIndicator" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" textLabel="eDa-lX-dDR" style="IBUITableViewCellStyleDefault" id="aOz-Yg-SAS">
+                                        <rect key="frame" x="0.0" y="66" width="320" height="44"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
+                                            <rect key="frame" x="0.0" y="0.0" width="300" height="43"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" text="ClippingADrawing" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="eDa-lX-dDR">
+                                                    <rect key="frame" x="10" y="0.0" width="280" height="43"/>
+                                                    <autoresizingMask key="autoresizingMask"/>
+                                                    <fontDescription key="fontDescription" type="boldSystem" pointSize="20"/>
+                                                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                                    <color key="highlightedColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                                </label>
+                                            </subviews>
+                                            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                        </view>
+                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                        <connections>
+                                            <segue destination="fTm-Ng-lCm" kind="push" id="Q9M-5P-Ypw"/>
+                                        </connections>
+                                    </tableViewCell>
+                                </cells>
+                            </tableViewSection>
+                        </sections>
                         <connections>
                             <outlet property="dataSource" destination="2Zf-IR-eAT" id="4f2-kr-yGI"/>
                             <outlet property="delegate" destination="2Zf-IR-eAT" id="iam-RR-TsV"/>
                         </connections>
                     </tableView>
-                    <navigationItem key="navigationItem" id="kZc-J0-ykv"/>
-                    <connections>
-                        <segue destination="ULK-7Y-US1" kind="push" identifier="ImageMasking" id="K8Q-cO-wWH"/>
-                    </connections>
+                    <navigationItem key="navigationItem" title="ImageMasking" id="kZc-J0-ykv"/>
                 </tableViewController>
             </objects>
             <point key="canvasLocation" x="-9" y="-149"/>
@@ -65,8 +101,25 @@
             </objects>
             <point key="canvasLocation" x="421" y="-147"/>
         </scene>
+        <scene sceneID="gJZ-lZ-zaR">
+            <objects>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="mhL-kf-Ti8" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <viewController id="fTm-Ng-lCm" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="DMt-sb-iHU" customClass="ClippingADrawingView">
+                        <rect key="frame" x="0.0" y="64" width="320" height="416"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                    </view>
+                    <navigationItem key="navigationItem" id="Oj6-73-lnt"/>
+                </viewController>
+            </objects>
+            <point key="canvasLocation" x="427" y="425"/>
+        </scene>
     </scenes>
     <classes>
+        <class className="ClippingADrawingView" superclassName="UIView">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/ClippingADrawingView.h"/>
+        </class>
         <class className="ImageMaskingView" superclassName="UIView">
             <source key="sourceIdentifier" type="project" relativePath="./Classes/ImageMaskingView.h"/>
         </class>
