--- a/ios/Tweets/Tweets/en.lproj/MainStoryboard.storyboard
+++ b/ios/Tweets/Tweets/en.lproj/MainStoryboard.storyboard
@@ -37,6 +37,21 @@
                                     <action selector="tweet:" destination="2" eventType="touchDown" id="Oh9-96-O5H"/>
                                 </connections>
                             </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="9Mk-5m-qY1">
+                                <rect key="frame" x="20" y="94" width="77" height="37"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
+                                <state key="normal" title="tweet 2">
+                                    <color key="titleColor" red="0.19607843459999999" green="0.30980393290000002" blue="0.52156865600000002" alpha="1" colorSpace="calibratedRGB"/>
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <state key="highlighted">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="tweet2:" destination="2" eventType="touchDown" id="HgX-Nb-X2g"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                     </view>
@@ -51,6 +66,7 @@
         <class className="ViewController" superclassName="UIViewController">
             <source key="sourceIdentifier" type="project" relativePath="./Classes/ViewController.h"/>
             <relationships>
+                <relationship kind="action" name="tweet2:"/>
                 <relationship kind="action" name="tweet:"/>
                 <relationship kind="outlet" name="tweetStatusLabel" candidateClass="UILabel"/>
             </relationships>
